--- a/recipes/car/car.html
+++ b/recipes/car/car.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>odin-recipes</title>
+    <title>Document</title>
 </head>
 <body>
-
-    <h1>Odin Recipes</h1>
-
-        <a href="./recipes/has/has.html">Hasenpfeffer</a>
-
-        <a href="./recipes/car/car.html">Carne Apache</a>
-
-        
     
+    <h1>Carne Apache</h1>
+
+    <img src="" alt="">
 </body>
 </html>
