Create p.html and edit index.html
Added h1, h2, p, img, ul, ol to p.html and added link to p.html from
index.html.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 
     <h1>Odin Recipes</h1>
 
-        <a href="./recipes/has/has.html">Hasenpfeffer</a>
+    <ul>
 
-        <a href="./recipes/car/car.html">Carne Apache</a>
+        <li><a href="./recipes/has/has.html">Hasenpfeffer</a></li>
 
-        
-    
-</body>
+        <li><a href="./recipes/car/car.html">Carne Apache</a></li>
+
+        <li><a href="./recipes/pasties/p.html">Yooper Pasties</a></li>
+
+    </ul>
+
+    </body>
 </html>
